--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -1,7 +1,7 @@
 .dashboard {
   width: 100%;
   display: flex;
-  row-gap: 2rem;
+  row-gap: 1rem;
   flex-direction: column;
   height: auto;
 }
@@ -11,7 +11,8 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  height: 100%;
+  height: 300px;
+  gap: 1rem;
 }
 
 .main-heading {
@@ -21,38 +22,38 @@
 }
 
 .dashboard .globe-graph {
-  background: #edd9ff;
+  background: var(--primaryColor);
   box-shadow: var(--shadow);
   border-radius: var(--borderRadius);
   width: 49%;
-  height: 300px;
+  height: 100%;
 }
 
 .dashboard .cards {
-  width: 49%;
+  width: 50%;
   display: flex;
   justify-content: space-between;
   align-items: start;
   flex-wrap: wrap;
   gap: 1rem;
-  height: 300px;
+  height: 100%;
 }
 
 .dashboard .cards .sm-card {
-  width: calc(49% - 0.5rem);
+  width: calc(50% - 0.5rem);
   box-shadow: var(--shadow);
   border-radius: var(--borderRadius);
   background: white;
-  height: 48%;
+  height: calc(50% - 0.5rem);
   padding: 1rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
-  color: rgb(91, 91, 91);
+  color: var(--text);
 }
 
-.dashboard .cards .cardColor1 {
+/* .dashboard .cards .cardColor1 {
   background: #fff4cf96;
 }
 
@@ -66,10 +67,10 @@
 
 .dashboard .cards .cardColor4 {
   background: #ffcaff85;
-}
+} */
 
 .dashboard .cards .sm-card h3 {
-  color: #000000ab;
+  color: var(--primaryColor);
   font-weight: 900;
   font-size: 2.5rem;
 }
@@ -138,7 +139,7 @@
   font-size: 15.7222px;
   line-height: 19px;
   text-transform: capitalize;
-  color: #000000;
+  color: #575757;
 }
 
 .dashboard .table table tr,
@@ -149,7 +150,7 @@
   font-size: 15.7222px;
   line-height: 19px;
   text-transform: capitalize;
-  color: #000000;
+  color: #6d6d6d;
 }
 
 @media screen and (max-width: 1024px) {
