--- a/src/styles/Users.css
+++ b/src/styles/Users.css
@@ -2,20 +2,20 @@
   width: 100%;
   padding: 2rem;
   border-radius: 50px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
   background: var(--white);
   max-width: 1320px;
 }
 
-
-.adminUserPage>.top {
+.adminUserPage > .top {
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.adminUserPage>.top>.filter {
+.adminUserPage > .top > .filter {
   display: flex;
   width: 60%;
   justify-content: flex-end;
@@ -23,9 +23,9 @@
   align-items: center;
 }
 
-.filter>label {
+.filter > label {
   text-decoration: none;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
@@ -33,7 +33,7 @@
   color: #000000;
 }
 
-.adminUserPage>.top>.filter>select {
+.adminUserPage > .top > .filter > select {
   color: var(--text);
   border: none;
   border-right: 8px solid transparent;
@@ -43,16 +43,16 @@
   background: var(--primary-color);
 }
 
-.adminUserPage>.top {
+.adminUserPage > .top {
   margin-bottom: 1rem;
 }
 
-.adminUserPage>.top>a {
+.adminUserPage > .top > a {
   display: flex;
   align-items: center;
   column-gap: 10px;
   text-decoration: none;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 600;
   font-size: 23px;
@@ -61,7 +61,7 @@
   width: 40%;
 }
 
-.adminUserPage>.top>a>span {
+.adminUserPage > .top > a > span {
   width: 38px;
   height: 38px;
   background: var(--primaryColor);
@@ -72,14 +72,14 @@
   align-items: center;
 }
 
-.adminUserPage>.top>a>span:hover {
+.adminUserPage > .top > a > span:hover {
   transition: 200ms ease-in-out;
   background: var(--secondaryBG);
   color: var(--primaryColor);
   border: 2px solid var(--primaryColor);
 }
 
-.adminUserPage>.top>a>span>img {
+.adminUserPage > .top > a > span > img {
   height: 19px;
   width: 19px;
   border-radius: 0px;
@@ -100,6 +100,7 @@
 
 .adminUserPage table td {
   border-left: 1px solid transparent !important;
+  padding-left: 10px;
 }
 
 .adminUserPage table tr:nth-of-type(even) {
@@ -109,6 +110,7 @@
 .adminUserPage .controls {
   display: flex;
   column-gap: 6px;
+  justify-content: center;
 }
 
 .adminUserPage .controls a {
@@ -122,8 +124,8 @@
   align-items: center;
 }
 
-.adminUserPage .controls a>img,
-.adminUserPage .controls a>i {
+.adminUserPage .controls a > img,
+.adminUserPage .controls a > i {
   /* height: 20px;
   width: 20px; */
   border-radius: 0px;
@@ -131,8 +133,8 @@
 }
 
 .adminUserPage .controls a:hover {
-  background: var(--primary-color);
-  border: var(--primary-color);
+  background: var(--primaryColor);
+  border: var(--primaryColor);
   transition: 200ms ease-in-out;
 }
 
@@ -140,14 +142,11 @@
   color: white;
 }
 
-
 .adminUserPage .controls .delete:hover {
   background: linear-gradient(180deg, #f44336 0%, #c52e23 100%);
   border: 1px solid linear-gradient(180deg, #ff1100 0%, #c52e23 100%);
   transition: 200ms ease-in-out;
 }
-
-
 
 .adminUserPage .table .image {
   width: 100px;
