--- a/src/index.css
+++ b/src/index.css
@@ -19,10 +19,12 @@
   --shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
   --hoverShadow: rgba(0, 0, 0, 0.12) 0px 1px 3px,
     rgba(0, 0, 0, 0.24) 0px 1px 2px;
-  --borderRadius: 2em;
+  --borderRadius: 1.2em;
 
   --btnBG: blueviolet;
   --btnText: grey;
+
+  --paraSize: 14px;
 }
 
 * {
