--- a/src/styles/Users.css
+++ b/src/styles/Users.css
@@ -1,7 +1,7 @@
 .adminUserPage {
   width: 100%;
-  padding: 2rem;
-  border-radius: 50px;
+  padding: 1rem;
+  border-radius: 30px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
     rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
   background: var(--white);
@@ -101,6 +101,11 @@
 .adminUserPage table td {
   border-left: 1px solid transparent !important;
   padding-left: 10px;
+  font-size: var(--paraSize);
+}
+
+.adminUserPage table th {
+  font-size: var(--paraSize);
 }
 
 .adminUserPage table tr:nth-of-type(even) {
