--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -51,7 +51,7 @@
   width: calc(50% - 0.5rem);
   box-shadow: var(--shadow);
   border-radius: var(--borderRadius);
-  background: white;
+  background: var(--white);
   height: calc(50% - 0.5rem);
   padding: 1rem;
   display: flex;
@@ -143,6 +143,7 @@
 
 .dashboard .table table tr {
   height: 60px;
+  background-color: var(--white);
 }
 
 .dashboard > .bottom {
@@ -173,6 +174,9 @@
 }
 
 @media screen and (max-width: 1024px) {
+  .main-heading {
+    font-size: 5rem;
+  }
   .dashboard .top {
     flex-direction: column;
     gap: 10px;
@@ -192,6 +196,9 @@
 }
 
 @media screen and (max-width: 768px) {
+  .main-heading {
+    font-size: 3rem;
+  }
   .dashboard .cards {
     height: auto;
   }
