--- a/src/styles/UI.css
+++ b/src/styles/UI.css
@@ -1,6 +1,7 @@
 .checkbox {
   /* transform: scale(1.5); */
   width: 60px;
+  padding: 0 3px;
   height: 25px;
   background: var(--primaryColor);
   border-radius: 22px;
@@ -22,8 +23,8 @@
 }
 
 .checkbox--on .checkbox__ball {
-  width: 25px;
-  height: 25px;
+  width: 20px;
+  height: 20px;
   background: var(--primaryColor);
   box-shadow: 0px 2.86105px 2.86105px rgba(0, 0, 0, 0.1);
   transition: 300ms ease-in-out;
@@ -32,8 +33,8 @@
 .checkbox__ball {
   background: whitesmoke;
   box-shadow: 0px 3px 4px 0px rgba(50, 50, 50, 0.72);
-  width: 25px;
-  height: 25px;
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
   transition: 300ms ease-in-out;
 }
@@ -130,20 +131,21 @@
   list-style: none;
   margin: 0;
   padding: 0;
+  background-color: var(--white);
 }
 
 .menuControls > li {
-  padding: 15px 15px;
-  color: grey;
-  font-weight: 500;
-  font-size: 16px;
-  min-width: 200px;
+  padding: 10px 15px;
+  color: var(--text);
+  font-weight: 400;
+  font-size: 14px;
+  min-width: 170px;
   font-family: "Poppins", sans-serif;
-  border-bottom: 1px solid rgba(128, 128, 128, 0.082);
+  border-bottom: 1px solid rgba(128, 128, 128, 0.175);
 }
 
 .menuControls > li:hover {
-  background: whitesmoke;
+  background: var(--background);
   cursor: pointer;
   color: var(--primaryColor);
   transition: 200ms ease-in;
@@ -151,4 +153,54 @@
 
 .menuControls > li i {
   margin-right: 5px;
+}
+
+.overlayBG {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  background: #0000004c;
+  z-index: 9999;
+}
+
+.overlay {
+  position: fixed;
+  z-index: 99999;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  border-radius: var(--borderRadius);
+  background: var(--white);
+  max-height: 700px;
+}
+
+.overlay .modalInner {
+  height: 100%;
+  overflow: auto;
+  border-radius: 40px;
+}
+
+.overlay .close {
+  all: unset;
+  color: var(--btnText);
+  background: var(--background);
+  margin-left: auto;
+  border-radius: 50%;
+  position: absolute;
+  right: 13px;
+  top: 10px;
+  width: 30px;
+  height: 30px;
+  z-index: 10000;
+  text-align: center;
+}
+
+.overlay .close:hover {
+  background: var(--primaryColor);
+  transition: 200ms ease;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.overlay .close:hover i {
+  color: white;
 }
