--- a/src/styles/AddUser.css
+++ b/src/styles/AddUser.css
@@ -12,7 +12,6 @@
 
 .addUserPage {
   width: 100%;
-  border: 1px solid #cdcfd2;
   border-radius: 30px;
 }
 
@@ -46,7 +45,7 @@
   font-size: 23.8926px;
   line-height: 29px;
   letter-spacing: 0.238926px;
-  color: #000000;
+  color: var(--text);
   margin-top: -10px;
 }
 
@@ -102,7 +101,6 @@
   font-weight: 400;
   font-size: 15.7222px;
   line-height: 19px;
-  text-transform: capitalize;
   color: #4a4a4a;
 }
 
@@ -123,7 +121,19 @@
   cursor: pointer;
   border-radius: 25px;
   padding-left: 15px;
-  background: rgb(244, 244, 244);
+  background: var(--background);
+  color: var(--text);
+}
+
+.addUserPage > .bottom > form > .inputField > input:disabled,
+.addUserPage > .bottom > form > .fullInputField > input:disabled,
+.addUserPage > .bottom > form > .fullInputField > textarea:disabled,
+.addUserPage > .bottom > form > .inputField > select:disabled,
+.addUserPage > .bottom > form > .inputField > textarea:disabled {
+  background-color: transparent;
+  font-size: 1.2rem;
+  margin-top: -5px;
+  font-weight: 500;
 }
 
 .addUserPage > .bottom > form > .inputField > textarea {
@@ -166,6 +176,8 @@
 .addUserPage > .bottom > form > .inputField > .img > .imgPreview > img {
   width: 100%;
   height: 100%;
+  object-fit: cover;
+  /* object-position: top; */
 }
 
 .addUserPage
@@ -191,16 +203,15 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 19px;
-  text-transform: capitalize;
   color: #ffffff;
   border-right: 8px solid transparent;
 }
 
-.addUserPage > .bottom > form > .inputField > input:hover,
+/* .addUserPage > .bottom > form > .inputField > input:hover,
 .addUserPage > .bottom > form > .inputField > select:hover {
   outline: 1.3px solid var(--primaryColor);
-  /* transition: 200ms ease-in-out; */
-}
+  transition: 200ms ease-in-out;
+} */
 
 .addUserPage .bottom > form .btns {
   width: 100%;
