--- a/src/styles/DashboardLayout.css
+++ b/src/styles/DashboardLayout.css
@@ -473,24 +473,28 @@
   height: 100%;
 }
 
+.dashboardContainer .rightSide {
+  min-height: calc(100vh - 80px);
+  max-width: 100%;
+  width: 100%;
+}
+
 .dashboardContainer .rightSide .page-container {
-  padding: 3rem;
-  padding-top: 130px;
-  max-width: 1400px;
-  min-height: 94vh;
   width: 100%;
   display: flex;
   justify-content: center;
   transition: all ease-in-out 0.6s;
+  max-width: 1020px;
+  padding: 0 2rem;
+  margin-top: 6rem;
 }
 
 .dashboardContainer .rightSide .page-container .container {
   width: 100%;
-  max-width: 1400px;
 }
 
 footer {
-  padding: 1rem 3rem;
+  padding: 1rem 1rem;
 }
 
 footer p {
@@ -530,5 +534,9 @@ footer p a {
   }
   .dashHeader .left {
     padding: 0;
+  }
+
+  .dashHeader.collapsed > .left {
+    padding-left: 0;
   }
 }
