--- a/src/styles/UI.css
+++ b/src/styles/UI.css
@@ -10,6 +10,7 @@
   align-items: center;
   justify-content: space-between;
   cursor: pointer;
+  border: 2px solid var(--white);
   box-shadow: 0px 0.5px 1px 0px rgba(50, 50, 50, 0.72);
   transition: 300ms ease-in-out;
 }
