--- a/src/styles/Users.css
+++ b/src/styles/Users.css
@@ -108,9 +108,13 @@
   color: var(--text);
   font-size: var(--paraSize);
 }
-
+tr {
+  height: 45px !important;
+}
 .adminUserPage table th {
   font-size: var(--paraSize);
+  text-align: left;
+  padding-left: 10px;
 }
 
 .adminUserPage table tr:nth-of-type(even) {
@@ -125,11 +129,12 @@
 
 .adminUserPage .controls button {
   all: unset;
-  width: 50px;
-  height: 50px;
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   text-decoration: none;
-  font-size: 1.5rem;
+  font-size: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
