--- a/src/index.css
+++ b/src/index.css
@@ -1,32 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
-:root {
-  /* --primaryColor: blueviolet;\ */
-  /* --primaryColor: #016bb9; */
-  --primaryColor: #16a086;
-  --secondaryColor: rgb(44, 44, 44);
-  --white: white;
-  --heading: rgb(66, 66, 66);
-  --chatBG: rgba(193, 193, 193, 0.164);
-  --lightest: rgba(128, 128, 128, 0.308);
-
-  --text: rgb(154, 154, 154);
-  --background: whitesmoke;
-  --secondaryBG: rgb(243, 243, 243);
-  --color: rgb(48, 48, 48);
-  --cardColor: rgb(252, 252, 252);
-  --glassBG: rgba(255, 255, 255, 0.505);
-  --shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
-  --hoverShadow: rgba(0, 0, 0, 0.12) 0px 1px 3px,
-    rgba(0, 0, 0, 0.24) 0px 1px 2px;
-  --borderRadius: 1.2em;
-
-  --btnBG: blueviolet;
-  --btnText: grey;
-
-  --paraSize: 14px;
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -55,5 +28,26 @@ body {
 }
 
 .bgWhite {
-  background: white;
+  background: var(--white);
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: var(--white);
+  border: 1px solid var(--background);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--primaryColor);
+  border-radius: var(--borderRadius);
+}
+
+/* Handle on hover */
+/* ::-webkit-scrollbar-thumb:hover {
+} */
